@@ -46,6 +46,7 @@
 #define MBWM_WINDOW_PROP_NET_USER_TIME   (1<<15)
 #define MBWM_WINDOW_PROP_CM_TRANSLUCENCY (1<<17)
 #define MBWM_WINDOW_PROP_MWM_HINTS       (1<<18)
+#define MBWM_WINDOW_PROP_HILDON_STACKING (1<<19)
 
 #define MBWM_WINDOW_PROP_ALL        (0xffffffff)
 
@@ -154,11 +155,11 @@ struct MBWMClientWindow
   int                            window_class;
   Bool                           override_redirect;
   Bool                           undecorated;
+
+  /* value of the atom _HILDON_STACKING_LAYER (1-10) */
+  unsigned int                   hildon_stacking_layer;
 };
 
-/**
- * Class of MBWMClientWindow.
- */
 struct MBWMClientWindowClass
 {
   MBWMObjectClass parent;
